code cleanup and fix extra paddings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,6 +172,10 @@ textarea, select, input, button { outline: none; }
 	background-repeat: no-repeat;
 	background-size: auto 100%;
 	background-position: top 5vh center;
+
+	/* override the padding for the bootstrap layout */
+	padding-left: 0;
+	padding-right: 0;
 }
 
 @media (max-height: 700px) {
